--- a/index.html
+++ b/index.html
@@ -36,17 +36,19 @@
                 <div class="row mb-3">
                     <label for="inputMensagem" class="col-sm-2 col-form-label">Mensagem</label>
                     <div class="col-sm-10">
-                        <textarea class="form-control" id="inputMensagem"></textarea>
+                        <textarea class="form-control" id="inputMensagem" disabled></textarea>
                     </div>
                 </div>
                 <div class="row mb-3">
                     <label for="inputLista" class="col-sm-2 col-form-label">Lista</label>
                     <div class="col-sm-10">
-                        <textarea class="form-control" id="inputLista"></textarea>
+                        <textarea class="form-control" id="inputLista" disabled></textarea>
                     </div>
                 </div>
-                <button type="submit" id="submit" class="btn btn-primary">Enviar</button>
-                <button type="btn" id="desconectar" class="btn btn-primary">logout</button>
+                <button type="submit" id="submit" class="btn btn-primary" style="display: none;">Enviar</button>
+                <button type="btn" id="desconectar" class="btn btn-danger" style="display: none;">logout</button>
+                <button type="btn" id="conectar" class="btn btn-secondary">login</button>
+                <button type="btn" id="apagar" class="btn btn-warning" style="display: none;">apagar lista</button>
             </form>
             </div>
         </div>
