--- a/index.html
+++ b/index.html
@@ -36,19 +36,20 @@
                 <div class="row mb-3">
                     <label for="inputMensagem" class="col-sm-2 col-form-label">Mensagem</label>
                     <div class="col-sm-10">
-                        <textarea class="form-control" id="inputMensagem" disabled></textarea>
+                        <textarea class="form-control" id="inputMensagem"></textarea>
                     </div>
                 </div>
                 <div class="row mb-3">
                     <label for="inputLista" class="col-sm-2 col-form-label">Lista</label>
                     <div class="col-sm-10">
-                        <textarea class="form-control" id="inputLista" disabled></textarea>
+                        <textarea class="form-control" id="inputLista"></textarea>
                     </div>
                 </div>
-                <button type="submit" id="submit" class="btn btn-primary" style="display: none;">Enviar</button>
-                <button type="btn" id="desconectar" class="btn btn-danger" style="display: none;">logout</button>
+                <!-- <button type="submit" id="submit" class="btn btn-primary" style="display: none;">Enviar</button> -->
+                <!-- <button type="btn" id="desconectar" class="btn btn-danger" style="display: none;">logout</button> -->
+                <!-- <button type="btn" id="conectar" class="btn btn-secondary">login</button> -->
+                <button type="btn" id="enviar" class="btn btn-sucess">enviar</button>
                 <button type="btn" id="apagar" class="btn btn-warning" style="display: none;">apagar lista</button>
-                <button type="btn" id="conectar" class="btn btn-secondary">login</button>
             </form>
             </div>
         </div>
