--- a/index.html
+++ b/index.html
@@ -62,7 +62,6 @@
         <div class="modal-content">
           <div class="modal-header">
             <h4 class="modal-title">QRCode</h4>
-            
           </div>
           <div class="modal-body">
             <div id="qrcode"></div>
@@ -73,7 +72,7 @@
     </div>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script type="text/javascript" src="qrcode.js"></script>
+    <script type="text/javascript" src="/whatsapp/qrcode.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 
